fixed error when viewing gift card

--- a/app/views/donate/show.html.erb
+++ b/app/views/donate/show.html.erb
@@ -48,7 +48,7 @@
                                             <dt>Cause</dt>
                                             <dd>
                                             <span class="pull-left">
-                                            	<img alt="" src="<%= CLOUDFRONT_HOST %>/<%=@donation.charity.logo.url%>" class="img-responsive center-block"
+                                            	<img alt="" src="<%=@donation.charity.logo.url%>" class="img-responsive center-block"
                                             style="margin: auto auto; height: auto; width: auto; max-height:100px; max-width:150px;">  <br/>  
                                             	<%= @donation.charity.charityname %>
                                             </span>
