made some text edits

--- a/app/views/faq/index.html.erb
+++ b/app/views/faq/index.html.erb
@@ -88,7 +88,7 @@
                                 </div>
                                 <div id="collapse4" class="panel-collapse collapse in">
                                     <div class="panel-body">
-                                    We are building an absolutely simple way for nonprofits, charities, and other project teams to create their own campaigns on our site. However, for our beta, we ask that you submit your request, and we will work with you to make sure your cause is listed on our site. 
+                                    We are building an absolutely simple way for nonprofits, charities, and other project teams to create their own campaigns on our site.  Please click on "Start Fundraiser" in the menu bar and start adding your cause. Once we receive the cause we will  verify it and then approve it. You will receive an email from us. 
                                     </div>
                                 </div>
                             </div>
@@ -173,7 +173,7 @@
                                 </div>
                                 <div id="collapse9" class="panel-collapse collapse in">
                                     <div class="panel-body">
-                                    Changefindr charges a small fee of 10% to keep the website up and running and for administration cost. Card processors charge anywhere between 10%-15% to convert the gift cards to cash for causes. Rest is given to the cause of your choice. So Causes end up getting 75%-80% of the amount donated.  
+                                    Changefindr charges a small fee of 10% to keep the website up and running and for administration cost. Card processors charge anywhere between 10%-15% (depending on the popularity of the card) to convert the gift cards to cash for causes. Rest is given to the cause of your choice. So Causes end up getting 75%-80% of the amount donated.  
                                     </div>
                                 </div>
                             </div>
