--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -24,7 +24,6 @@
         <!-- Right Image -->
         <img src="<%= CLOUDFRONT_HOST %>/images/giftcards_main.jpg" class="ls-l" style="top:50%; left:70%;" alt="Image layer">
 
-
         
         
         <!-- Left Text -->
@@ -288,7 +287,7 @@
                             <div class="col-md-6">
                                 <h2 class="title" style="text-align:center">Congratulations to 
                                     <a href="/cause/show/39">CoderDojo</a>
-                                     on their fundraiser.<br/> They were able to buy their first Lego Robotic Kit from partially-used gift card donations.</h2>
+                                     on their fundraiser.<br/> They were able to buy a Robotic Kit from partially-used gift card donations.</h2>
 
                                 <br/>
                                 <p>CoderDojo is a movement orientated around running free not-for-profit coding clubs and regular sessions for young people. At a CoderDojo, young people learn how to code, develop websites, apps, programs, games and more. Dojos are set up, run by and taught at by volunteers. Dojos organize tours of technology companies, bring in guest speakers to talk about their career and what they do, and organise events. In addition to learning to code, members meet like minded people, show off what they've been working on and so on. CoderDojo makes development and learning to code a fun, sociable, kick ass experience. CoderDojo also puts a strong emphasis on open source and free software, and has a strong network of members and volunteers globally.
