--- a/app/views/layouts/_usergiftcards.html.erb
+++ b/app/views/layouts/_usergiftcards.html.erb
@@ -17,7 +17,7 @@ color: #fff;
 
             <h3 style="color: #333;">My Gift Cards</h3>
 
-                <div class="col-lg-6" style="text-align:center">
+                <div class="col-lg-6" style="text-align:center;color: black;">
                     <div class="row">
                         <% 
                             @usergiftcards.each do |usergiftcard|
