--- a/app/views/termsconditions/_terms.html.erb
+++ b/app/views/termsconditions/_terms.html.erb
@@ -43,16 +43,14 @@
     <br /><br />
     You can submit new causes on www.changefindr.com that you want to support. You warrant and represent that you are raising money for a cause that is legal under applicable laws and that benefits a non-profit cause. Changefindr may decline causes in its sole discretion at any time and makes no representation that contributions to any particular cause are tax-deductible. Participation in the Services is subject to Changefindr’s prior approval.
     By submitting the application, you grant Changefindr a worldwide right to display your listing on our site and you represent and warrant that you have the right to enter into and perform this agreement with Changefindr including, but not limited to, the consent of the charitable organization or cause to authorize the use of its name and logos for promotional, marketing and advertising purposes related to this promotional endeavor.
-    Causes can enter a PayPal account when signing up with Changefindr and revenues are only made available for withdrawal 30 days after the end of each month.
-    Withdrawing revenues requires having a valid PayPal account. Please make sure that your PayPal account can receive incoming payments before withdrawing funds.
-    Your profile can be associated with only one PayPal account. A PayPal account cannot be associated with more than one profile.
-    PayPal charges 2% of the total withdrawal sum, and up to a maximum of $1 when withdrawing revenues. Please check PayPal’s website for current rates and fees.
-    Withdrawals are final. We will not be able to refund or change this process once it has begun.
-    If your cause has not entered a valid PayPal account when signing up, Changefindr will send your organization a check at the beginning of each year, provided the organization has accrued $50 or more. If the organization has earned less than $50, the funds will be allocated to a charity chosen by Changefindr in its sole discretion.
+
+
+    Changefindr will send you a Check every month provided your organization has collected $100. If the organization has earned less than $50 for that month it will be carried forward to the next month.
+
     In situations where it is not possible for Changefindr to transfer the donation to the Organization recommended by Merchant (including, without limitation, where an Organization has ceased to carry on operations), Changefindr has the right to forward the donation to another Organization Changefindr deems appropriate and in line with the spirit and aim of the original Organization
     Fees and Payment
     <br /><br />
-    Changefindr is free to join. We charge a fee of 25% per transaction on all proceeds to support our operations. You understand and accept that all fees charged are subject to change at any time. Funds (less all applicable fees) are available after a safety clearance period of 30 days. Users and/or beneficiaries have full responsibility for all applicable taxes for funds paid. User agrees to indemnify, defend and hold Changefindr harmless from any liability for, or assessment of, any claims or penalties with respect to such withholding taxes, labor or employment requirements, including any liability for, or assessment of, withholding taxes imposed on Changefindr by the relevant taxing authorities with respect to any funds paid.
+    Changefindr is free to join. We charge a fee of up to 25% per transaction on all proceeds to support our operations and pay the card processors. You understand and accept that all fees charged are subject to change at any time. Funds (less all applicable fees) are available after a safety clearance period of 30 days. Users and/or beneficiaries have full responsibility for all applicable taxes for funds paid. User agrees to indemnify, defend and hold Changefindr harmless from any liability for, or assessment of, any claims or penalties with respect to such withholding taxes, labor or employment requirements, including any liability for, or assessment of, withholding taxes imposed on Changefindr by the relevant taxing authorities with respect to any funds paid.
     <br /><br />
     General Terms
     <br /><br />
