corrected error when bhn returns 503 for balance check quote

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,10 @@
 	
 <!-- Essentials -->
 
-
+<!-- social bar for facebook, etc. -->
+<link rel="stylesheet" type="text/css" href="<%= CLOUDFRONT_HOST %>/js/jquery_socialbar/jssocials.css" />
+<link rel="stylesheet" type="text/css" href="<%= CLOUDFRONT_HOST %>/js/jquery_socialbar/jssocials-theme-flat.css" />
+<script type="text/javascript" src="<%= CLOUDFRONT_HOST %>/js/jquery_socialbar/jssocials.min.js"></script>
 
 <script src="<%= CLOUDFRONT_HOST %>/js/modernizr.custom.js"></script>
 <script src="<%= CLOUDFRONT_HOST %>/assets/bootstrap/js/bootstrap.min.js"></script>
@@ -62,9 +65,7 @@
 <!-- Initializing the slider -->
 
 
-<link rel="stylesheet" type="text/css" href="<%= CLOUDFRONT_HOST %>/js/jquery_socialbar/jssocials.css" />
-<link rel="stylesheet" type="text/css" href="<%= CLOUDFRONT_HOST %>/js/jquery_socialbar/jssocials-theme-flat.css" />
-<script type="text/javascript" src="<%= CLOUDFRONT_HOST %>/js/jquery_socialbar/jssocials.min.js"></script>
+
 
 
 </head>
