--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -24,7 +24,15 @@
         <!-- Right Image -->
         <img src="<%= CLOUDFRONT_HOST %>/images/giftcards_main.jpg" class="ls-l" style="top:50%; left:70%;" alt="Image layer">
 
-        
+        <div class="ls-l visible-lg visible-md" style="width:200px;height:150px;max-height:150px;top:95%; left:84%;">
+         
+
+            <a href="http://blackhawknetwork.com/" target="_blank">
+                <img src="<%= CLOUDFRONT_HOST %>/images/Blackhawk_Network_Partner.jpg" style="width:90%" alt="Image layer"/>
+            </a>
+            <p style="text-align: right;color: black;font-size: 80%;margin-right: 20px;">Partner</P>
+
+        </div>
         
         <!-- Left Text -->
         <h3 class="ls-l title title-sm strong" style="width:550px; top:15%; left:80px;">Donate Your Partially-Used<br/>Gift Cards</h3>
