resolved email logo image problem

--- a/app/views/layouts/mailerlayout.html.erb
+++ b/app/views/layouts/mailerlayout.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
 <%
-   host = "https://changefindr.heroku.com/"
+   host = "http:www.changefindr.com/"
 %>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -108,7 +108,7 @@
                                              <td width="174" height="60" align="left">
                                                 <div class="imgpop">
                                                    <a target="_blank" href="#">
-                                                   <img src="<%=host%>images/ChangefinderLogo-blue.png" alt="" border="0" width="145" height="25" style="display:block; border:none; outline:none; text-decoration:none;">
+                                                   <img src="<%= CLOUDFRONT_HOST %>/images/ChangefinderLogo-blue.png" alt="" border="0" width="145" height="25" style="display:block; border:none; outline:none; text-decoration:none;">
                                                    </a>
                                                    
                                                    
