--- a/app/views/donate/_donation_form.html.erb
+++ b/app/views/donate/_donation_form.html.erb
@@ -86,6 +86,10 @@ if @donation.errors.any? %>
                                  
                                 <br/><br/>
 
+                                <%= recaptcha_tags %>
+
+                                <br/><br/>
+
                                 <label>By donating this card, I/we agree to all the <a id="TermsLink">terms and conditions</a></label>
 
                                 
