--- a/app/views/cause/index.html.erb
+++ b/app/views/cause/index.html.erb
@@ -79,6 +79,21 @@
                         <div class="gap"></div>
                     </div>                                   
                 </div>
+
+             
+<div class="row">
+
+    <div class="col-md-6">
+        
+    </div>
+         
+
+
+    <div class="col-md-6">
+        <%= will_paginate @causes , renderer: BootstrapPagination::Rails %>
+    </div>
+</div>  
+
         	</div>    	
         </div>
     </section>
