--- a/app/views/cause/show.html.erb
+++ b/app/views/cause/show.html.erb
@@ -87,8 +87,9 @@
                                     <br/>
                                     <p>
                                         <label style="text-decoration: underline;">Share this link with your friends</label>
-                                          <%= short_url(@shortcauseurl) %>                            
-  <button class='my_clip_button' data-clipboard-target='fe_text' data-clipboard-text='<%= short_url(@shortcauseurl) %>' id='d_clip_button' title='Click me to copy to clipboard.'>
+
+                                          <%= request.protocol + request.host_with_port + request.fullpath %>                            
+  <button class='my_clip_button' data-clipboard-target='fe_text' data-clipboard-text='<%= request.protocol + request.host_with_port + request.fullpath %>' id='d_clip_button' title='Click me to copy to clipboard.'>
     Copy
   </button>
   </p>
