--- a/app/views/team/index.html.erb
+++ b/app/views/team/index.html.erb
@@ -65,12 +65,12 @@
                 <hr>
                 <div class="row ">  
                 	<div class="col-md-3">
-                		<img src="<%= CLOUDFRONT_HOST %>/images/SaulMigramPic.jpg" class="img-responsive" alt="">
+                		<img src="<%= CLOUDFRONT_HOST %>/images/simranintern.jpg" class="img-responsive" alt="">
                 	</div>
                 	<div class="col-md-9">
                 		<div class="row">
                 			<div class="col-md-7">
-                				<h4 class="title">Vice President – Product Management</h4>
+                				<h4 class="title">Marketing Intern</h4>
                 			</div>
                 			<div class="col-md-5">
                 				<div class="social-media social-media-sm text-right">
@@ -80,9 +80,9 @@
 			                    </div>
                 			</div>
                 		</div>
-                		<h3 class="title-lg">Saul Milgram</h3>
+                		<h3 class="title-lg">Simran Makker</h3>
                 		<p>
-                			Saul has over 12 years of experience in fast-paced technology companies developing product strategies and roadmaps, including all aspects of product management from cradle-to-grave. He launched the first real time payment systems and programs in the country for prepaid wireless cash acceptance. He also built and managed payment products for Major Retail, Dealers, and Online channels that scaled to over $200M/month. Saul leads by example by starting with the customer and working backwards, earning the trust of others, innovating to achieve results, and thinking big. He believes in ownership and accountability, and using data to drive decision-making, while always having a bias for action. Saul holds a B.Sc. in Biology, and an MBA from McMaster University in Canada.
+                			Simran is currently a junior at Rochester Institute of Technology pursuing a dual degree in Marketing and Advertising Photography. She has previous work experience working with small startups in different areas with marketing. She is an active member of the Zeta Tau Alpha sorority and has a lot of experience with fundraising for different causes.
                 		</p>
                 		
                 	</div>
