--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -98,6 +98,10 @@ if session[:partnersite] != true %>
                     <li class="dropdown dropdown-meganav mega-dropdown-fluid">
                         <a href="/howitworks/index">How It Works</a> 
                     </li>
+
+                    <li class="dropdown dropdown-meganav mega-dropdown-fluid">
+                        <a href="/blog/index">Blogs</a> 
+                    </li>
                     
 
                      <% if session[:user_firstname] == nil %>
