--- a/app/views/blog/_blog_form.html.erb
+++ b/app/views/blog/_blog_form.html.erb
@@ -43,7 +43,7 @@
     <div class="row">
         <div class="col-md-6">
             <div class="form-group">
-                <label>Title</label>
+                <label>Blog Title</label>
                 
                  <%= f.text_field :title, :placeholder=>"", :hidefocus=>"true", :class=>"form-control input-lg" %>
             </div>
