--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -1,2 +1,63 @@
-<h1>Blog#index</h1>
-<p>Find me in app/views/blog/index.html.erb</p>
+ <!-- MAIN CONTENT -->
+    	<div class="pg-opt">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-6">
+                    <h2>Blogs</h2>
+
+                </div>
+                <div class="col-xs-6">
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <section class="slice bg-white">
+        <div class="wp-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-9 col-md-offset-1">
+                    	
+                    	<ul class="list-listings blog-list">
+
+                    		<li>
+                    			<a href="/blog/new" class="btn btn-sm btn-base pull-left">Post New Blog</a>
+                    		</li>
+
+                    		<% @blogs.each do |blog| 
+
+
+                    		%>
+
+                            <li class="">
+               
+                                <div class="listing-body">
+                                    <h3><a href="/blog/show?blog_id=<%= blog.blog_id %>"><%= blog.title %></a></h3>
+                                    <span class="list-item-info">
+                                        Posted by <a href="/blog/show?blog_id=<%= blog.blog_id %>"><%= blog.first_name %> <%= blog.last_name %> </a> on <%= blog.created.strftime("%B %d %Y") %>
+                                    </span>
+                                    <p>
+                                   	<%= truncate_html(blog.description.html_safe, length: 10000) %>
+                                   
+                                    </p>
+                                    <p>
+                                        <a href="/blog/show?blog_id=<%= blog.blog_id %>" class="btn btn-sm btn-base pull-left">Read more</a>
+                                        <br/><br/>
+                                    </p>
+                                </div>
+                            </li>
+
+                            <% end %>
+                            
+                        </ul>
+
+                       
+                    
+                    	
+                </div>
+            </div>
+        </div>
+    </div>
+    </section>
