updated to allow wsywig text area for cause info

--- a/app/views/cause/show.html.erb
+++ b/app/views/cause/show.html.erb
@@ -114,7 +114,7 @@
                                             <div class="tab-body">
                                                 
                                                 <p>
-                                                    <%= @cause.description %>
+                                                    <%= @cause.description.html_safe %>
                                                 </p>
                                             </div>
                                         </div>
