--- a/app/views/blog/_blog_form.html.erb
+++ b/app/views/blog/_blog_form.html.erb
@@ -47,6 +47,12 @@
                 
                  <%= f.text_field :title, :placeholder=>"", :hidefocus=>"true", :class=>"form-control input-lg" %>
             </div>
+            <br/>
+            <div class="form-group">
+                <label>Keywords (Seperate by comma)</label>
+                
+                 <%= f.text_field :keywords, :placeholder=>"", :hidefocus=>"true", :class=>"form-control input-lg" %>
+            </div>
         </div>
         <div class="col-md-9">
             <div class="form-group">
