--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -80,45 +80,83 @@
  
 </div>
 
+<br/><br/><br/>
 
-
-
-
-<!-- Featured Cause Thomas House Run -->   
-<section id="companyCarousel" class="carousel carousel-2 slide bg-white bb" data-ride="carousel">
-        <div class="container relative">
-            
-            
+<section class="slice white bb">
+        <div class="wp-section">
+            <div class="container">
+                <div class="row">  
+                    <div class="col-md-8">
                         <div class="row">
-                            
+                            <div class="col-md-12">
+                                <p>
                                 <%
                                     thomascause = Charity.where(:charityid => 177).first
 
                                     featuredCause = Charity.where(:charityid => 177).first
                                 %>
 
-                          
-
-                            <br/><br/>
+                           
                             <div class="col-md-12" style="display: inline-block;text-align: center;">
-                                <h2 class="title" style="text-align:center">Featured Cause<br/>
+                                <h5 class="title" style="text-align:center;font-size: 30px;">Featured Cause<br/>
                                      <img src="<%=featuredCause.logo.url%>" class="img-responsive" alt="" style="display:inline-block">
                                     <a href="/cause/show/177">Nepal Earthquake Relief By NAG</a>
-                                     <br/> </h2>
+                                     <br/> </h5>
 
                                 <br/>
-                                <p>Dear Respected Community Members and friends of Nepal, We are very deeply saddened by the tragedy and damages of epic proportion that the recent earthquake caused in our motherland Nepal. Our community deeply grieves over the loss of life in particular, and for those that will continue to have to endure further suffering in coming days and months. The entire Nepalese Association of Georgia (NAG) community, while we mourn and pray, offer our heartfelt condolences and sympathies to the bereaved families affected by this natural disaster. Historic buildings in Kathmandu lay in rubble on the ground. The injured are being treated outside hospitals in chaotic scenes. <a href="/cause/show/177">Read More...</a>
+                                <p style="font-size: 15px;">Dear Respected Community Members and friends of Nepal, We are very deeply saddened by the tragedy and damages of epic proportion that the recent earthquake caused in our motherland Nepal. Our community deeply grieves over the loss of life in particular, and for those that will continue to have to endure further suffering in coming days and months. The entire Nepalese Association of Georgia (NAG) community, while we mourn and pray, offer our heartfelt condolences and sympathies to the bereaved families affected by this natural disaster. Historic buildings in Kathmandu lay in rubble on the ground. The injured are being treated outside hospitals in chaotic scenes. <a href="/cause/show/177">Read More...</a>
                                 </p>
                                 <button id="register_button" class="btn btn-base btn-icon btn-icon-right btn-sign-in" type="button" onclick="location.href='/donate/new/?charityid=177'">
                                                         <span>Donate Partially-Used Gift Card</span>
                                     </button>
                                 <br/><br/>
                             </div>
-                            
+                                </p>
+
+                                
+                             
+
+                            </div>
                         </div>
-                   
+                        
+                    </div> 
+                    <div class="col-md-4">
+                        <div class="wp-block base">
+                            <div class="wp-block-body">
+                                <h5 class="c-white">In The News - Press Releases</h5>
+                                <br/>
+                                
+                                   <a href="http://blackhawknetwork.com/cardpool-assists-changefindr-to-enable-charitable-donations-of-gift-cards/" rel="bookmark" title="Permanent Link: Cardpool Assists Changefindr to Enable Charitable Donations of Gift Cards" target="blank" style="color: black;font-size: 18px;text-decoration: underline;">Cardpool Assists Changefindr to Enable Charitable Donations of Gift Cards </a>
+
+                                   <br/><br/>
+                                   <h5 class="c-white">As Seen On:</h5>
+                                   <ul>
+                                        <li style="font-size: 14px;color: black;">PR Newswire</li>
+                                        <li style="font-size: 14px;color: black;">NewsJS</li>
+                                        <li style="font-size: 14px;color: black;">WSET</li>
+                                        <li style="font-size: 14px;color: black;">Fast Start.talk</li>
+                                        <li style="font-size: 14px;color: black;">Critical Mass Radio Show</li>
+                                        
+                                    </ul>
+
+                                  
+
+                                   <br/><br/
+
+                                
+                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-</section>
+    </section>
+
+
+
+
+
 
 <%= render partial: "layouts/usergiftcards" %>
  
